--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container mt-4">
         <div class="row">
+            <div id="loading-popup">Loading .ply, this may take from seconds to a couple of minutes</div>
             <div class="col-12 text-center">
                 <h4>WebGPU Webpack + TypeScript Starter</h4>
                 <canvas id="webgpu-canvas" class="img-fluid" width="1280" height="720"></canvas>
@@ -22,14 +23,9 @@
                     <a href="https://web.dev/gpu/#use">here</a>.</p>
                 </div>
             </div>
-            <div class="mx-auto col-12 col-lg-8 row">
-                <h4>Description</h4>
-                <p>This is a starter template to get you quickly set up with a development
-                environmnet for WebGPU! The template uses <a href="https://webpack.js.org/">webpack</a>
-                to manage dependencies and build. Grab the template on
-                <a href="https://github.com/Twinklebear/webgpu-webpack-starter">GitHub</a> and
-                make some cool stuff!</p>
-            </div>
+            <button style="display:block" onclick="document.getElementById('plyButton').click()">Choose
+                point_cloud.ply</button>
+            <input type="file" accept=".ply" style="display:none" id="plyButton" />
         </div>
     </div>
 </body>
