Color tiles by num gaussians

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container mt-4">
         <div class="row">
-            <div id="loading-popup">Loading .ply, this may take from seconds to a couple of minutes</div>
+            <div style="display: none" id="loading-popup">Loading .ply, this may take from seconds to a couple of minutes</div>
             <div class="col-12 text-center">
                 <h4>WebGPU Webpack + TypeScript Starter</h4>
                 <canvas id="webgpu-canvas" class="img-fluid" width="1280" height="720"></canvas>
